--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,5 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     kapt 'android.arch.persistence.room:compiler:1.1.1'
-
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
